[gd_scene load_steps=85 format=3 uid="uid://bc4ksfds1f7f6"]

[ext_resource type="Script" path="res://ads/ad_menu.gd" id="1_qew6a"]
[ext_resource type="PackedScene" uid="uid://dmgjiunetoneg" path="res://ads/ad_preview_box.tscn" id="2_yq0ia"]
[ext_resource type="PackedScene" uid="uid://d1nv736gkesjq" path="res://ads/ad_menu_button.tscn" id="3_tlw0m"]
[ext_resource type="Texture2D" uid="uid://oq4i8ihvofau" path="res://resources/ads/graphic_design.png" id="4_onase"]
[ext_resource type="Texture2D" uid="uid://d3o0lnnu38nrq" path="res://resources/ads/mogus.png" id="5_q3upx"]
[ext_resource type="Texture2D" uid="uid://m3qby1va0oyd" path="res://resources/ads/truckin thursday.png" id="6_idejw"]
[ext_resource type="Texture2D" uid="uid://dc05ufhpm4onl" path="res://resources/ads/buy-now.png" id="7_m847v"]
[ext_resource type="Texture2D" uid="uid://bclumvrsoxhkp" path="res://resources/ads/buybuybuy1.png" id="8_kpd33"]
[ext_resource type="Texture2D" uid="uid://bfs1cb6x2vrvx" path="res://resources/ads/buybuybuy2.png" id="9_v08h1"]
[ext_resource type="Texture2D" uid="uid://b7khs3ysohn7c" path="res://resources/ads/buybuybuy3.png" id="10_kepc1"]
[ext_resource type="Texture2D" uid="uid://dvjn5g4tu60rn" path="res://resources/ads/tbblobnoern.png" id="11_x8q4n"]
[ext_resource type="Texture2D" uid="uid://dr4rmywlbjnhn" path="res://resources/ads/salmon_2.png" id="12_7vin2"]
[ext_resource type="Texture2D" uid="uid://c6ohnu3u2a5r" path="res://resources/ads/not_medicine.png" id="12_xj1ok"]
[ext_resource type="Texture2D" uid="uid://cmppym42ekfo8" path="res://resources/ads/salmon_1.png" id="13_82fab"]
[ext_resource type="Texture2D" uid="uid://dgg2mp4nhc5s6" path="res://resources/ads/pi_for_i.png" id="13_d6ksr"]
[ext_resource type="Texture2D" uid="uid://rn4nrdk23h38" path="res://resources/ads/salmon_3.png" id="14_tfa2s"]
[ext_resource type="Texture2D" uid="uid://psd0okelil17" path="res://resources/ads/salmon_4.png" id="15_ag5gy"]
[ext_resource type="Texture2D" uid="uid://cvqmtb0jek6kd" path="res://resources/ads/industry_sprites1.png" id="18_c2mfc"]
[ext_resource type="Texture2D" uid="uid://st8poy1kbnh8" path="res://resources/ads/industry.png" id="19_1tfg5"]
[ext_resource type="Texture2D" uid="uid://bbuu0hkagfnx7" path="res://resources/ads/yoga.png" id="20_lvnyv"]
[ext_resource type="Texture2D" uid="uid://cvmwsct0l3nkf" path="res://resources/ads/car_insurance.png" id="21_5dx54"]
[ext_resource type="Texture2D" uid="uid://dcfb16okknq6j" path="res://resources/ads/susquehanna_hats.png" id="22_d65lg"]
[ext_resource type="Texture2D" uid="uid://c36hricorp8w2" path="res://resources/ads/slurm.png" id="23_wko4q"]
[ext_resource type="Texture2D" uid="uid://ch8jfpfst6p02" path="res://resources/ads/ponder_texture.png" id="24_ocjgp"]
[ext_resource type="Texture2D" uid="uid://dfb30rcxgjgyr" path="res://resources/ads/ponder.png" id="25_ddnuv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yul2t"]
bg_color = Color(0.996078, 0.945098, 0.862745, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ryx4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_kpd33")
}, {
"duration": 1.0,
"texture": ExtResource("9_v08h1")
}, {
"duration": 1.0,
"texture": ExtResource("10_kepc1")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2jnwm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_82fab")
}, {
"duration": 1.0,
"texture": ExtResource("13_82fab")
}, {
"duration": 1.0,
"texture": ExtResource("12_7vin2")
}, {
"duration": 1.0,
"texture": ExtResource("12_7vin2")
}, {
"duration": 1.0,
"texture": ExtResource("14_tfa2s")
}, {
"duration": 1.0,
"texture": ExtResource("14_tfa2s")
}, {
"duration": 1.0,
"texture": ExtResource("15_ag5gy")
}, {
"duration": 1.0,
"texture": ExtResource("15_ag5gy")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bjdky"]
atlas = ExtResource("19_1tfg5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w36nn"]
atlas = ExtResource("19_1tfg5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu2mm"]
atlas = ExtResource("19_1tfg5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg11r"]
atlas = ExtResource("19_1tfg5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpia"]
atlas = ExtResource("19_1tfg5")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3u8c"]
atlas = ExtResource("19_1tfg5")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6scix"]
atlas = ExtResource("19_1tfg5")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nnl2"]
atlas = ExtResource("19_1tfg5")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7xjh"]
atlas = ExtResource("19_1tfg5")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw8ay"]
atlas = ExtResource("19_1tfg5")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n6piv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjdky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w36nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu2mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg11r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3u8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6scix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nnl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7xjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw8ay")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mveds"]
atlas = ExtResource("25_ddnuv")
region = Rect2(0, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14lir"]
atlas = ExtResource("25_ddnuv")
region = Rect2(256, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvnf1"]
atlas = ExtResource("25_ddnuv")
region = Rect2(512, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m45u"]
atlas = ExtResource("25_ddnuv")
region = Rect2(768, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1g11"]
atlas = ExtResource("25_ddnuv")
region = Rect2(1024, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_moflq"]
atlas = ExtResource("25_ddnuv")
region = Rect2(1280, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxquk"]
atlas = ExtResource("25_ddnuv")
region = Rect2(1536, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikon8"]
atlas = ExtResource("25_ddnuv")
region = Rect2(1792, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcs7r"]
atlas = ExtResource("25_ddnuv")
region = Rect2(2048, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctynn"]
atlas = ExtResource("25_ddnuv")
region = Rect2(2304, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e587w"]
atlas = ExtResource("25_ddnuv")
region = Rect2(2560, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s00wg"]
atlas = ExtResource("25_ddnuv")
region = Rect2(2816, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4h1k"]
atlas = ExtResource("25_ddnuv")
region = Rect2(3072, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78y6p"]
atlas = ExtResource("25_ddnuv")
region = Rect2(3328, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrjqb"]
atlas = ExtResource("25_ddnuv")
region = Rect2(3584, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ww0m"]
atlas = ExtResource("25_ddnuv")
region = Rect2(3840, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibh4g"]
atlas = ExtResource("25_ddnuv")
region = Rect2(4096, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00fke"]
atlas = ExtResource("25_ddnuv")
region = Rect2(4352, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kqhb"]
atlas = ExtResource("25_ddnuv")
region = Rect2(4608, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsdeb"]
atlas = ExtResource("25_ddnuv")
region = Rect2(4864, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcsa1"]
atlas = ExtResource("25_ddnuv")
region = Rect2(5120, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ikxs"]
atlas = ExtResource("25_ddnuv")
region = Rect2(5376, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c55lk"]
atlas = ExtResource("25_ddnuv")
region = Rect2(5632, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_621b4"]
atlas = ExtResource("25_ddnuv")
region = Rect2(5888, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_grxmu"]
atlas = ExtResource("25_ddnuv")
region = Rect2(6144, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8scrm"]
atlas = ExtResource("25_ddnuv")
region = Rect2(6400, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbec6"]
atlas = ExtResource("25_ddnuv")
region = Rect2(6656, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fmmm"]
atlas = ExtResource("25_ddnuv")
region = Rect2(6912, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmse6"]
atlas = ExtResource("25_ddnuv")
region = Rect2(7168, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iajli"]
atlas = ExtResource("25_ddnuv")
region = Rect2(7424, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_merkr"]
atlas = ExtResource("25_ddnuv")
region = Rect2(7680, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hecvg"]
atlas = ExtResource("25_ddnuv")
region = Rect2(7936, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qgco"]
atlas = ExtResource("25_ddnuv")
region = Rect2(8192, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a7g6"]
atlas = ExtResource("25_ddnuv")
region = Rect2(8448, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flqwe"]
atlas = ExtResource("25_ddnuv")
region = Rect2(8704, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww4xb"]
atlas = ExtResource("25_ddnuv")
region = Rect2(8960, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mqm2"]
atlas = ExtResource("25_ddnuv")
region = Rect2(9216, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw72i"]
atlas = ExtResource("25_ddnuv")
region = Rect2(9472, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eygru"]
atlas = ExtResource("25_ddnuv")
region = Rect2(9728, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t713q"]
atlas = ExtResource("25_ddnuv")
region = Rect2(9984, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjt7a"]
atlas = ExtResource("25_ddnuv")
region = Rect2(10240, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3awjt"]
atlas = ExtResource("25_ddnuv")
region = Rect2(10496, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm0si"]
atlas = ExtResource("25_ddnuv")
region = Rect2(10752, 0, 256, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfjec"]
atlas = ExtResource("25_ddnuv")
region = Rect2(11008, 0, 256, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_l1cpi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mveds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14lir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvnf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m45u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1g11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moflq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxquk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikon8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcs7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctynn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e587w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s00wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4h1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78y6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrjqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ww0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibh4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00fke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kqhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsdeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcsa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ikxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c55lk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_621b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grxmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8scrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbec6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fmmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmse6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iajli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_merkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hecvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qgco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a7g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flqwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww4xb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mqm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw72i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eygru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t713q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjt7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3awjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm0si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfjec")
}],
"loop": true,
"name": &"default",
"speed": 27.0
}]

[node name="AdMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_qew6a")
slow_menu_duration = 0.2

[node name="Preview" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Preview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.513726, 0.513726, 0.454902)

[node name="BoxContainer" type="BoxContainer" parent="Preview"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ad_preview_box" parent="Preview/BoxContainer" instance=ExtResource("2_yq0ia")]
unique_name_in_owner = true

[node name="MenuPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2

[node name="MenuButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = -35.0
offset_top = 138.0
offset_right = 75.0
offset_bottom = 178.0
rotation = -1.5708
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_yul2t")
theme_override_styles/hover = SubResource("StyleBoxFlat_yul2t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yul2t")
theme_override_styles/disabled = SubResource("StyleBoxFlat_yul2t")
theme_override_styles/focus = SubResource("StyleBoxFlat_yul2t")
text = "Ads"

[node name="ColorRect" type="ColorRect" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.996078, 0.945098, 0.862745, 1)

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel"]
layout_mode = 0
offset_right = 230.0
offset_bottom = 306.0
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 13

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MenuPanel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Add an Ad"

[node name="Description" type="Label" parent="MenuPanel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Click and drag to add an ad"

[node name="GraphicDesign" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
income_amount = 400
ad_texture = ExtResource("4_onase")

[node name="BuyNow" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
income_amount = 3
income_per_tick = true
ad_texture = ExtResource("7_m847v")

[node name="Tbblobnoern" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 1
income_amount = 5
income_per_tick = true
ad_texture = ExtResource("11_x8q4n")

[node name="Amogus" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 1
income_amount = 600
ad_texture = ExtResource("5_q3upx")

[node name="TruckinThursdays" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 2
income_amount = 25
income_per_tick = true
ad_texture = ExtResource("6_idejw")

[node name="BuyBuyBuy" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 2
income_amount = 100
ad_texture = ExtResource("8_kpd33")
ad_animation = SubResource("SpriteFrames_4ryx4")

[node name="Medicine" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 3
income_amount = 800
ad_texture = ExtResource("12_xj1ok")

[node name="PiForI" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 3
income_amount = -1
ad_texture = ExtResource("13_d6ksr")

[node name="Salmon" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 4
income_amount = 10
income_per_tick = true
ad_texture = ExtResource("12_7vin2")
ad_animation = SubResource("SpriteFrames_2jnwm")

[node name="Insurance" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 4
income_amount = 500
ad_texture = ExtResource("21_5dx54")

[node name="Yoga" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 5
income_amount = 400
ad_texture = ExtResource("20_lvnyv")

[node name="Industry" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 5
income_amount = 100
ad_texture = ExtResource("18_c2mfc")
ad_animation = SubResource("SpriteFrames_n6piv")

[node name="SusquehannaHats" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 6
income_amount = 20
income_per_tick = true
ad_texture = ExtResource("22_d65lg")

[node name="Slurm" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 6
income_amount = 20
income_per_tick = true
ad_texture = ExtResource("23_wko4q")

[node name="Ponder" parent="MenuPanel/MarginContainer/VBoxContainer" instance=ExtResource("3_tlw0m")]
layout_mode = 2
unlock_level = 7
income_amount = 1000
ad_texture = ExtResource("24_ocjgp")
ad_animation = SubResource("SpriteFrames_l1cpi")

[connection signal="pressed" from="MenuPanel/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/GraphicDesign" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/GraphicDesign" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/GraphicDesign" to="." method="_on_button_preview_ad"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/BuyNow" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/BuyNow" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/BuyNow" to="." method="_on_button_preview_ad"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/Tbblobnoern" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/Tbblobnoern" to="." method="_on_button_preview_ad"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/Amogus" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/Amogus" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/Amogus" to="." method="_on_button_preview_ad"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/TruckinThursdays" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/TruckinThursdays" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/TruckinThursdays" to="." method="_on_button_preview_ad"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/BuyBuyBuy" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/BuyBuyBuy" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/BuyBuyBuy" to="." method="_on_button_preview_ad"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/Medicine" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/Medicine" to="." method="_on_button_preview_ad"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/PiForI" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/PiForI" to="." method="_on_button_preview_ad"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/Salmon" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/Salmon" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/Salmon" to="." method="_on_button_preview_ad"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/Insurance" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/Insurance" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/Insurance" to="." method="_on_button_preview_ad"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/Yoga" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/Yoga" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/Yoga" to="." method="_on_button_preview_ad"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/Industry" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/Industry" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/Industry" to="." method="_on_button_preview_ad"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/SusquehannaHats" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/SusquehannaHats" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/SusquehannaHats" to="." method="_on_button_preview_ad"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/Slurm" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/Slurm" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/Slurm" to="." method="_on_button_preview_ad"]
[connection signal="mouse_exited" from="MenuPanel/MarginContainer/VBoxContainer/Ponder" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/Ponder" to="." method="_on_button_pressed"]
[connection signal="preview_ad" from="MenuPanel/MarginContainer/VBoxContainer/Ponder" to="." method="_on_button_preview_ad"]
